--- a/style.css
+++ b/style.css
@@ -1,65 +1,78 @@
+* {
+  border: 1px solid black;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  margin-top: 10vh;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
+
 #calculette {
+  height: 600px;
+  width: 350px;
   display: grid;
-  border: 1px solid black;
-  height: 550px;
-  width: 300px;
-  grid-template-columns: 80% 20%;
-  grid-template-rows: 20% 80%;
+  grid-template-columns: 100%;
+  grid-template-rows: 30% 70%;
   grid-template-areas:
     "aff his"
     "cla his";
 }
+
 #historique {
-  width: 100%;
-  height: 100%;
-  border: 1px solid black;
   grid-area: his;
+  display: none;
 }
+
 #affichage {
-  width: 100%;
-  height: 100%;
-  border: 1px solid black;
-  grid-area: aff;
-  text-align: center;
   display: flex;
+  grid-area: aff;
   flex-direction: column;
 }
+
+#clavier {
+  display: flex;
+  grid-area: cla;
+  flex-direction: column;
+}
+
 #saisi {
-  height: 65%;
+  height: 70%;
   width: 100%;
-  border: 1px solid black;
+  text-align: end;
+  padding-top: 20%;
 }
 #resultat {
+  height: 30%;
   width: 100%;
-  height: 35%;
-  border: 1px solid black;
+  text-align: end;
+  padding-top: 2%;
 }
-#clavier {
-  width: 100%;
+
+#base {
   height: 100%;
-  border: 1px solid black;
+  width: 100%;
   display: grid;
-  grid-template-rows: 20% 80%;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
 }
 #specifique {
-  border: 1px solid black;
-}
-#base {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 20% 20% 20% 20% 20%;
-  align-items: center;
+  width: 100%;
+  display: none;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-items: center;
+  align-items: center;
 }
-button {
-  border: 1px solid black;
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
+
+.bouton {
   background: none;
+  border-radius: 50%;
+  height: 60px;
+  width: 60px;
 }
