--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@
   --text-ope: rgb(77, 77, 77);
   --text-clear: black;
   --overlay-dark: rgba(75, 74, 74, 0.13);
+  --flash-button: rgba(32, 31, 31, 0.438);
+  --rgb-shad: #03030340;
 }
 
 body[data-theme="dark"] {
@@ -67,6 +69,8 @@ body[data-theme="dark"] {
   --text-ope: rgb(162, 180, 211);
   --text-clear: rgb(163, 190, 238);
   --overlay-dark: rgba(90, 90, 90, 0.623);
+  --flash-button: rgba(221, 216, 216, 0.477);
+  --rgb-shad: #f9f8f81e;
 }
 
 body[data-theme="dark"] .calculette[data-history="open"] {
@@ -215,7 +219,7 @@ body {
   background-color: var(--bg-modal);
   border-radius: 15px;
   padding-left: 15px;
-  box-shadow: 0 0 3px 0px #00000061;
+  box-shadow: 0 0 5px 0px var(--rgb-shad);
   z-index: 20;
 }
 
@@ -245,13 +249,36 @@ body {
   font-size: 1.7rem;
   line-height: 1;
   border: 0;
-  background: var(--bg);
+  background-color: var(--bg);
   border-radius: 50%;
   height: 90%;
   width: 90%;
   display: grid;
   place-items: center;
   color: var(--text-bouton);
+  transition: background-color 200ms ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.bouton::after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  background-color: var(--flash-button); /* couleur de l’onde */
+  width: 200%;
+  height: 200%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  opacity: 0;
+  pointer-events: none;
+  transition: transform 500ms ease, opacity 700ms ease;
+}
+
+.bouton.ripple::after {
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
 }
 
 .menu-button {
@@ -283,11 +310,24 @@ body {
 
 .icon {
   display: flex;
+  height: 30px;
+  width: 30px;
   justify-content: center;
   align-items: center;
-  background: none;
+  background-color: transparent;
   border: 0;
+  border-radius: 50%;
+  transition: background-color 300ms ease;
 }
+
+.flashButton {
+  background-color: var(--flash-button);
+}
+
+.flash {
+  background-color: var(--bg);
+}
+
 .icon svg {
   display: block;
   fill: var(--svg-color);
@@ -305,7 +345,7 @@ body {
   background-color: var(--bg-modal);
   width: 250px;
   border-radius: 20px;
-  box-shadow: 0 0 4px 0 #00000059;
+  box-shadow: 0 0 4px 0 var(--rgb-shad);
   padding: 10px;
   z-index: 30;
 }
